Adding db support for flight data, adding new functions to handle mock flight data, updating swagger UI to better address flight search
